adjust footer spacing issue

--- a/styles.css
+++ b/styles.css
@@ -169,7 +169,6 @@ iframe {
 	text-align: center;
 	padding: 20px;
 	opacity: .7;
-	margin: 0;
 }
 
 .footer a:hover {
